--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aprendendo Git</title>
 </head>
 <body>
-    <h1>Olá Mundo Git!</h1>
+    <h1>Olá Mundo Git e do GitHub!</h1>
     <script src="js/index.js"></script>
 </body>
 </html>
